plot within batch ari

--- a/analysis_templates/01-single-group-integration-check-template.Rmd
+++ b/analysis_templates/01-single-group-integration-check-template.Rmd
@@ -4,6 +4,7 @@ params:
   merged_sce_dir: "../results/scib_simulated/merged_sce"
   integrated_sce_dir: "../results/scib_simulated/integrated_sce"
   integration_methods: !r as.vector(c("fastmnn", "harmony", "cca", "rpca"))
+  library_metadata: "../sample-info/scib-simulated-processed-libraries.tsv"
   batch_column: "batch"
   celltype_column: "celltype"
   max_celltypes: 5
@@ -140,6 +141,47 @@ sce_list <- purrr::map(all_sce_files, readr::read_rds) %>%
   set_names(c("unintegrated", integration_methods))
 ```
 
+```{r}
+# find all pre-integrated sce files for a project and create a list 
+# to do that read in the library metadata
+# filter to the group and grab the library ids and the integration input directory
+if(!file.exists(params$library_metadata)){
+  stop("Provided `library_metadata` file does not exist.")
+}
+
+library_metadata <- readr::read_tsv(params$library_metadata) |> 
+  dplyr::filter(project_name == params$group_name)
+
+# grab the directory used as input to the integration workflow
+individual_sce_dir <- library_metadata |> 
+  dplyr::pull(integration_input_dir) |>
+  unique() 
+individual_sce_dir <- file.path(project_root, individual_sce_dir)
+
+# construct the search pattern of all libraries to look for
+library_id_pattern <- library_metadata |> 
+  dplyr::pull(library_biomaterial_id) |> 
+  paste(collapse = "|")
+
+# get the full file path for all expected libraries
+individual_sce_files <- list.files(individual_sce_dir,
+                                   pattern = library_id_pattern,
+                                   full.names = TRUE,
+                                   recursive = TRUE)
+
+# grab the library ids from the file paths
+library_ids <- stringr::str_remove(basename(individual_sce_files), "_sce.rds")
+
+# make sure that all the libraries we expect to be there have a corresponding file
+if(!all(library_ids %in% library_metadata$library_biomaterial_id)){
+  stop("Iindividual SCE objects not present for all libraries in group.")
+}
+
+# create list of individual sce objects 
+individual_sce_list <- individual_sce_files |> 
+  purrr::set_names(library_ids) |> 
+  purrr::map(readr::read_rds)
+```
 
 
 ```{r sce-checks}
@@ -507,6 +549,48 @@ if (celltypes_present) {
 }
 ```
 
+
+### Within batch ARI
+
+```{r}
+# purrr across the list of integrated sce objects to compare against the integrated objects 
+within_batch_ari <- purrr::imap(sce_list, 
+                                \(sce, int_method){
+                                  calculate_within_batch_ari(individual_sce_list,
+                                                             sce,
+                                                             seed = params$seed,
+                                                             integration_method = int_method,
+                                                             unintegrated = FALSE,
+                                                             batch_column = params$batch_column)
+                                }) |>
+  dplyr::bind_rows()
+```
+
+```{r}
+# set order of integration methods on axes
+within_batch_ari <- set_integration_order(within_batch_ari)
+
+# plot within batch ARI by integration method
+ggplot(within_batch_ari, aes_string(x = "integration_method_factor" , y = "ari")) +
+    ggforce::geom_sina() +
+    # add median point to plot
+    stat_summary(
+      color = "red",
+      fun = "median",
+      fun.min = function(x) {
+        quantile(x, 0.25)
+      },
+      fun.max = function(x) {
+        quantile(x, 0.75)
+      },
+      geom = "pointrange",
+      size = 0.5
+    ) +
+    labs(
+      x = "Integration method",
+      y = "ARI"
+    )
+```
 
 ### Batch ASW
 
